<resources>
    <string name="app_name">Chemistry SS</string>
    <string name="H2SO4_compound">Серная кислота</string>
    <string name="H2SO4_formula">H2SO4</string>
    <string name="main_name">Chemistry SS</string>
    <string name="main_equalize">Уравнять реакцию</string>
    <string name="main_mm">Вычислить молекулярную массу</string>
    <string name="main_table">Таблица Менделеева</string>
    <string name="main_info">Полезная информация</string>
    <string name="main_search">Поиск формулы по названию</string>
    <string name="main_search_1">Введите название соединения</string>
    <string name="main_search_buttons">Кнопки для ввода валентности</string>
    <string name="main_help">Помощь</string>
    <string name="main_contacts">Контакты</string>
    <string name="main_inDev">Разделы в разработке</string>
    <string name="email_che">chemistrySS.help@gmail.com</string>
    <string name="help_1">О разделе \"УРАВНЯТЬ РЕАКЦИЮ\"</string>
    <string name="help_2">О разделе \"ВЫЧИСЛИТЬ МОЛЕКУЛЯРНУЮ МАССУ\"</string>
    <string name="help_3">О разделе \"ТАБЛИЦА МЕНДЕЛЕЕВА\"</string>
    <string name="help_4">О разделе \"ПОЛЕЗНАЯ ИНФОРМАЦИЯ\"</string>
    <string name="help_7">О разделе \"ПОИСК ФОРМУЛЫ ПО НАЗВАНИЮ\"</string>
    <string name="help_5">Остались вопросы? \nПрисылайте по адресу:</string>
    <string name="help_6">Мы обязательно ответим!</string>
    <string name="help_equalize_theory">В уравнении химической реакции для выравнивания количества одинаковых
        атомов в левой и правой частях уравнения используются коэффициенты, которые
        записываются перед формулами веществ. Коэффициент показывает количество вещества,
        участвующего в данной реакции.
    </string>
    <string name="help_equalize_chemystrySS">Chemistry SS позволяет расставить коэффициенты примерно в
        90% уравнений реакции! Вам нужно просто ввести уравнение реакции без коэффициентов и нажать
        «УРАВНЯТЬ». Для более удобного ввода символов добавлены кнопки ввода цифр, круглых и
        квадратных скобок, а также символы «равно» и «плюс». Необходимо вводить элементы в правильном регистре
        (большие и малые буквы)!
    </string>
    <string name="help_mm_theory">Молекулярная масса - масса молекулы, выраженная в относительных единицах
        (называемых а.е.м. или дальтон). Эта величина введена для удобства, поскольку действительная
        масса молекул в общепринятых единицах массы чрезвычайно мала. За единицу молекулярной массы
        принята 1/12 массы атома изотопа углерода-12, условно равная 12.
    </string>
    <string name="help_mm_chemystrySS">Chemistry SS рассчитывает молекулярные массы даже сложных
        соединений и выдает как точное значение, так и округленное. Для более удобного ввода
        символов добавлены кнопки ввода цифр, круглых и квадратных скобок. Необходимо вводить элементы в правильном регистре
        (большие и малые буквы)!
    </string>
    <string name="help_table_theory">Таблица Менделеева - таблица для классификации химических
        элементов, устанавливающая зависимость различных свойств элементов от заряда атомного ядра.
    </string>
    <string name="help_table_chemystrySS">В Chemistry SS представлено 2 вида таблиц с различным
        приближением. В обычной таблице хорошо прослеживается принадлежность элемента к определенному
        периоду и группе. Увеличенная версия таблицы предоставляет дополнительную информацию об атомной массе
        элемента и агрегатном состоянии при нормальных условиях. Клетки таблицы разукрашены в
        соответствии с принадлежностью элемента к определенному классу веществ. При нажатии на элемент
        выводится детальная информация о нем, а также приводится ссылка на соответствующую
        страницу Wikipedia. Информация есть для каждого из 118 элементов!
    </string>
    <string name="help_info_theory">Раздел содержит много полезной информации по химии в таблицах:</string>
    <string name="help_info_chemystrySS">•Таблица растворимости\n•Электрохимический ряд напряжений металлов
    \n•Цвет пламени при горении\n•Цвета и области перехода pH индикаторов\n•Характеристические частоты в
        ИК- спектроскопии\n•Химические сдвиги в спектрах 1Н ЯМР\n•Химические сдвиги в спектрах 13С ЯМР
    \n•Качественные реакции на катионы\n•Качественные реакции на анионы\n•Качественные реакции на органические соединения
    </string>
    <string name="indev_theory">В настоящее время разрабатываются следующие разделы приложения:
    </string>
    <string name="indev_chemystrySS">•Учебник по общей, неорганической и органической химии\n•Решение задач\n•Поиск реакций по реагентам или продуктам реакции\n\nТакже раздел полезной информации
        будет пополнен рядом таблиц.</string>
    <string name="help_search_theory">Приложение содержит около 7000 соединений (неорганические соли, кислоты, основания, оксиды и др. соединения). База данных веществ постоянно пополняется!
    </string>
    <string name="help_search_chemystrySS">Раздел представляет интерес в первую очеред для школьников и студентов нехимических специальностей, однако он также содержит тривиальные названия и названия достаточно редковстречающихся соединений, поэтому может быть полезен для всех, кто связан с химией. Для ввода можно использовать круглые скобки для указания валентности, например, "Сульфат железа(III)".</string>
    <string name="info_table_sol">Таблица растворимости</string>
    <string name="info_row_met">Электрохимический ряд напряжений металлов</string>
    <string name="info_color_flame">Цвет пламени при горении</string>
    <string name="info_color_indicator">Цвета и области перехода pH индикаторов</string>
    <string name="info_IK">Характеристические частоты в ИК- спектроскопии</string>
    <string name="info_H1NMR">Химические сдвиги в спектрах 1Н ЯМР</string>
    <string name="info_NMR">Химические сдвиги в спектрах 13С ЯМР</string>
    <string name="info_reactions_cations">Качественные реакции на катионы</string>
    <string name="info_reactions_anions">Качественные реакции на анионы</string>
    <string name="info_reactions_organic_comp">Качественные реакции на органические соединения</string>
    <string name="info_IK_name">Характеристические частоты в инфракрасной спектроскопии</string>
    <string name="info_H1NMR_nameTable">Таблица химических сдвигов 1Н ЯМР</string>
    <string name="info_H1NMR_1_1">(CH3)4Si</string>
    <string name="info_H1NMR_1_2">0</string>
    <string name="info_H1NMR_2_1">RCH3</string>
    <string name="info_H1NMR_2_2">0.8-1.0</string>
    <string name="info_H1NMR_3_1">RCH2R</string>
    <string name="info_H1NMR_3_2">1.2-1.4</string>
    <string name="info_H1NMR_4_1">R3CH</string>
    <string name="info_H1NMR_4_2">1.4-1.7</string>
    <string name="info_H1NMR_5_1">R2C=CRCHR2</string>
    <string name="info_H1NMR_5_2">1.6-2.6</string>
    <string name="info_H1NMR_6_1">RC≡CH</string>
    <string name="info_H1NMR_6_2">2.0-3.0</string>
    <string name="info_H1NMR_7_1">ArCH3</string>
    <string name="info_H1NMR_7_2">2.2-2.5</string>
    <string name="info_H1NMR_8_1">ArCH2R</string>
    <string name="info_H1NMR_8_2">2.3-2.8</string>
    <string name="info_H1NMR_9_1">ROH</string>
    <string name="info_H1NMR_9_2">0.5-6.0</string>
    <string name="info_H1NMR_10_1">RCH2OH</string>
    <string name="info_H1NMR_10_2">3.4-4.0</string>
    <string name="info_H1NMR_11_1">RCH2OR</string>
    <string name="info_H1NMR_11_2">3.3-4.0</string>
    <string name="info_H1NMR_12_1">R2NH</string>
    <string name="info_H1NMR_12_2">0.5-5.0</string>
    <string name="info_H1NMR_13_1">RC(=O)CH3</string>
    <string name="info_H1NMR_13_2">2.1-2.3</string>
    <string name="info_H1NMR_14_1">RC(=O)CH2R</string>
    <string name="info_H1NMR_14_2">2.2-2.6</string>
    <string name="info_H1NMR_15_1">RC(=O)OCH3</string>
    <string name="info_H1NMR_15_2">3.7-3.9</string>
    <string name="info_H1NMR_16_1">RC(=O)OCH2R</string>
    <string name="info_H1NMR_16_2">4.1-4.7</string>
    <string name="info_H1NMR_17_1">RCH2I</string>
    <string name="info_H1NMR_17_2">3.1-3.3</string>
    <string name="info_H1NMR_18_1">RCH2Br</string>
    <string name="info_H1NMR_18_2">3.4-3.6</string>
    <string name="info_H1NMR_19_1">RCH2Cl</string>
    <string name="info_H1NMR_19_2">3.6-3.8</string>
     <string name="info_H1NMR_20_1">RCH2F</string>
    <string name="info_H1NMR_20_2">4.4-4.5</string>
    <string name="info_H1NMR_21_1">ArOH</string>
    <string name="info_H1NMR_21_2">4.5-4.7</string>
    <string name="info_H1NMR_22_1">R2C=CH2</string>
    <string name="info_H1NMR_22_2">4.6-5.0</string>
    <string name="info_H1NMR_23_1">R2C=CHR</string>
    <string name="info_H1NMR_23_2">5.0-5.7</string>
    <string name="info_H1NMR_24_1">ArH</string>
    <string name="info_H1NMR_24_2">6.5-8.5</string>
    <string name="info_H1NMR_25_1">RC(=O)H</string>
    <string name="info_H1NMR_25_2">9.5-10.1</string>
    <string name="info_H1NMR_26_1">RC(=O)OH</string>
    <string name="info_H1NMR_26_2">10-13</string>
    <string name="info_C13NMR_nameTable">Таблица химических сдвигов 13C ЯМР</string>
    <string name="info_C13NMR_1_1">RCH3</string>
    <string name="info_C13NMR_1_2">0-40</string>
    <string name="info_C13NMR_2_1">RCH2R</string>
    <string name="info_C13NMR_2_2">15-55</string>
    <string name="info_C13NMR_3_1">R3CH</string>
    <string name="info_C13NMR_3_2">20-60</string>
    <string name="info_C13NMR_4_1">RCH2I</string>
    <string name="info_C13NMR_4_2">0-40</string>
    <string name="info_C13NMR_5_1">RCH2Br</string>
    <string name="info_C13NMR_5_2">25-65</string>
    <string name="info_C13NMR_6_1">RCH2Cl</string>
    <string name="info_C13NMR_6_2">35-80</string>
    <string name="info_C13NMR_7_1">R3CH2OH</string>
    <string name="info_C13NMR_7_2">40-80</string>
    <string name="info_C13NMR_8_1">R3COR</string>
    <string name="info_C13NMR_8_2">40-80</string>
    <string name="info_C13NMR_9_1">RC≡CR</string>
    <string name="info_C13NMR_9_2">65-85</string>
    <string name="info_C13NMR_10_1">R2C=CR2</string>
    <string name="info_C13NMR_10_2">100-150</string>
    <string name="info_C13NMR_11_1">Aromatic C</string>
    <string name="info_C13NMR_11_2">110-160</string>
    <string name="info_C13NMR_12_1">RC(=O)OR</string>
    <string name="info_C13NMR_12_2">160-180</string>
    <string name="info_C13NMR_13_1">RC(=O)NR2</string>
    <string name="info_C13NMR_13_2">165-180</string>
    <string name="info_C13NMR_14_1">RC(=O)OH</string>
    <string name="info_C13NMR_14_2">175-185</string>
    <string name="info_C13NMR_15_1">RC(O)H</string>
    <string name="info_C13NMR_15_2">180-210</string>
    <string name="info_C13NMR_16_1">RC(O)R</string>
    <string name="info_C13NMR_16_2">180-210</string>
    <string name="info_IK_name_1">Класс вещества</string>
    <string name="info_IK_name_2">Группа</string>
    <string name="info_IK_name_3">Диапазон поглощения, 1/см</string>
    <string name="info_IK_name_4">Интенсивность</string>
    <string name="info_alkane_1">Алканы</string>
    <string name="info_alkane_2_1">C–H вал.</string>
    <string name="info_alkane_2_2">CH3 деф.\n\n </string>
    <string name="info_alkane_2_3">CH2 деф.\n </string>
    <string name="info_alkane_3_1">3000—2840</string>
    <string name="mm_enter">Введите соединение, соблюдая правильный регистр символов</string>
    <string name="mm_equalize">Вычислить</string>
    <string name="equalize_1">1</string>
    <string name="equalize_2">2</string>
    <string name="equalize_3">3</string>
    <string name="equalize_4">4</string>
    <string name="equalize_5">5</string>
    <string name="equalize_6">6</string>
    <string name="equalize_7">7</string>
    <string name="equalize_8">8</string>
    <string name="equalize_9">9</string>
    <string name="equalize_0">0</string>
    <string name="equalize_skobka1">(</string>
    <string name="equalize_skobka2">)</string>
    <string name="equalize_skobka3">[</string>
    <string name="equalize_skobka4">]</string>
</resources>